Arrays Algo 1 added

--- a/index.html
+++ b/index.html
@@ -3,10 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <script src="BasicFunction1.js"></script>
+    <title>To Do 1</title>
+    <script src="ToDo1.js"></script>
 </head>
 <body>
-    
 </body>
 </html>
